@@ -100,7 +100,7 @@ int main( int /*argc*/, char ** argv)
 
   catch( Exception &error_ )
     {
-      cout << "Caught exception: " << error_ << endl;
+      cout << "Caught exception: " << error_.what() << endl;
       return 1;
     }
   catch( exception &error_ )
