@@ -55,9 +55,6 @@
 /* Define to 1 if you have the <inttypes.h> header file. */
 #undef HAVE_INTTYPES_H
 
-/* Define to 1 if you have the <iosfwd> header file. */
-#undef HAVE_IOSFWD
-
 /* Define to 1 if you have the <jp2conf.h> header file. */
 #undef HAVE_JP2CONF_H
 
