@@ -16,8 +16,8 @@ Installing Magick++</h1></center>
 <h3>
 General</h3>
 In order to compile Magick++ you must have access to a standard C++ implementation.
-The author uses&nbsp; <a href="http://gcc.gnu.org/index.html">gcc 3.0.4
-(GNU C++)</a> which is available under UNIX and under the
+The author uses&nbsp; <a href="http://gcc.gnu.org/index.html">gcc 3.1 (GNU
+C++)</a> which is available under UNIX and under the
 <a href="http://www.cygwin.com/">Cygwin
 UNIX-emulation environment</a> for Windows. Standards compliant commercial
 C++ compilers should also work fine. Most modern C++ compilers for Microsoft
