@@ -1,3 +1,7 @@
+2002-05-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* Magick++ library no longer depends on iostreams at all.
+
 2002-04-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* lib/Image.cpp (throwImageException): ExceptionInfo was not being
